Pre-pre-LD changes

--- a/styles.css
+++ b/styles.css
@@ -88,11 +88,17 @@
     height: 62px;
     background: no-repeat 50%/100% 100%
 }
-.carousel-control-prev-icon {
+.carousel-control-prev-icon.white {
     background-image: url("./images/arrow_white_left.png");
 }
-.carousel-control-next-icon {
+.carousel-control-next-icon.white {
     background-image: url("./images/arrow_white_right.png");
+}
+.carousel-control-prev-icon.black {
+    background-image: url("./images/arrow_black_left.png");
+}
+.carousel-control-next-icon.black {
+    background-image: url("/images/arrow_black_right.png");
 }
 
 .loader {
@@ -110,59 +116,14 @@
     100% { transform: rotate(360deg); }
 }
 
-.slick-prev,
-.slick-next {
-  position: absolute;
-  top: 50%;
-  z-index: 1;
-  color: #333;
-  transform: translateY(-69%);
+/* Pre-pre-LD */
+.dropdown-item a:hover {
+	color: #C271FF !important;
 }
 
-.slick-prev {
-  background: url('./images/arrow_black_left.png') no-repeat;
-  background-position: center;
-  background-size: cover;
-  border: none;
-}
-
-.slick-next {
-  background: url('./images/arrow_black_right.png') no-repeat;
-  background-position: center;
-  background-size: cover;
-  border: none;
-}
-
-.slick-prev {
-  left: 0;
-  font-size: 0;
-  width: 29px;
-  height: 62px;
-  background-color:rgba(0, 0, 0, 0.0);
-}
-
-.slick-next {
-  right: 0;
-  font-size: 0;
-  width: 29px;
-  height: 62px;
-  background-color:rgba(0, 0, 0, 0.0);
-}
-
-.card-img-top {
-  position: relative;
-}
-
-.play-button {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 25%;
-  height: auto;
-}
-
-.card-img-top img {
-  max-width: 100%;
-  height: auto;
+#sort-by:focus,
+#sort-by:hover,
+#topic:focus,
+#topic:hover {
+	background-color: #C271FF;
 }
